src/App.css
@import "~normalize.css";
@import url("https://fonts.googleapis.com/css?family=Contrail+One&display=swap");
@import url("https://fonts.googleapis.com/css?family=Barlow+Condensed|Economica|Open+Sans+Condensed:300|Oswald|Pathway+Gothic+One|Prompt|Ropa+Sans|Teko&display=swap");
@import url("https://fonts.googleapis.com/css?family=Dorsa|Italiana|Tulpen+One|Wire+One&display=swap");

* {
  box-sizing: border-box;
}

.App {
  text-align: center;
  height: 100%;
  padding: 5px;
}

html {
  background: linear-gradient(rgb(5, 89, 138), rgb(17, 17, 17) 30%, transparent),
    repeating-linear-gradient(rgb(29, 73, 124), rgb(8, 91, 158) 90px);

  background-color: rgb(0, 0, 0);
  background-repeat: no-repeat;
  background-attachment: fixed;
  height: 100%;
}

body {
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  font-size: 10px;
  height: 100%;
}

#root {
  height: 100%;
}

h1 {
  font-size: 3rem;
  margin: 1px;
}

h2 {
  color: white;
  font-size: 1.3rem;
}

a {
  text-decoration: none;
}

.tagline {
  font-family: Contrail One;
  font-size: 1.2rem;
  color: rgb(0, 162, 255);
}

.title-div {
  width: 100%;

  text-align: left;
  padding: 0 0 0 10px;
  margin-bottom: 5px;
}

.right-side-links {
  display: flex;
  align-items: center;
  padding: 0 10px 0 0; 
}

.gitlink,.linkedin-link {
  margin: 5px;
  font-size: 2rem;
  z-index: 1;
  color: rgb(110, 135, 154);
}

.gitlink:hover,
.linkedin-link:hover {
  margin: 5px;
  font-size: 2rem;
  z-index: 1;
  color: rgb(255, 115, 0);
}

.header {
  width: 100%;
  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0), rgb(0, 0, 0));
  display: flex;
  justify-content: space-between;
}
/* ----------------------------------
          MOVIES MOVIES MOVIES | | | 
---------------------------------- */

.movie-container {
  margin-top: 90px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 4px;
  justify-items: center;
  margin-top: 250px;
}

@media (min-width: 415px) {
  .movie-container {
    margin-top: 90px;
  }
}

@media (min-width: 500px) {
  .movie-container {
    margin-top: 80px;
  }
}

@media (min-width: 620px) {
  .movie-container {
    margin-top: 35px;
  }
}

@media (min-width: 800px) {
  .movie-container {
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    margin-top: 5px;
  }
}

.image {
  display: block;
  border-radius: 2px;
  border: solid 2px rgb(70, 70, 70);
  width: 100%;
  cursor: pointer;
  box-shadow: 1px 0 0;
}

.image:hover {
  border-color: rgb(0, 225, 255);
}

/* ----------------------------------
          GENRES GENRES GENRES | | |
---------------------------------- */

.genres-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  grid-gap: 5px;
  width: 100%;
  height: 50px;
  margin-bottom: 5px;
}

@media (min-width: 800px) {
  .genres-container {
    grid-template-columns: repeat(6, 1fr);
  }
}

.genre-button {
  font-family: Teko;
  min-width: 50px;
  background-color: black;
  color: white;
  border-radius: 5px;
  cursor: pointer;
  margin: 1px;
  padding: 7px;
  opacity: 0.8;
  font-size: 1.6rem;
  text-transform: uppercase;
  border-color: rgb(49, 49, 49);
  border-width: 2px;
}

.genre-button:hover {
  border-color: rgb(0, 225, 255);
}

.genre-button:focus {
  outline: 0;
}

/* ----------------------------------
          ANIMATIONS ANIMATIONS | | |
---------------------------------- */

.colorshift {
  font-family: Teko;
  letter-spacing: 8px;
  color: #000000;
  background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-animation: hue 10s infinite linear;
}

@-webkit-keyframes hue {
  from {
    -webkit-filter: hue-rotate(0deg);
  }
  to {
    -webkit-filter: hue-rotate(-360deg);
  }
}

